# highstreets

./: .flake8  .gitignore  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  Jenkinsfile  JenkinsfileHsdsLookup  JenkinsfileMcardThreehourly  JenkinsfileMcardWeeklyAnnualChange  Jenkinsfile_hs_bid_tc_bespoke_update  README.md  environment.yml  highstreets.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
highstreets/: __init__.py  cli.py  config.py  highstreets.py
highstreets/api/: clientbase.py
highstreets/data/: bt_read_raw.py  make_dataset.py  schema.py
highstreets/data/mcard/: mcard_read_raw.py
highstreets/data_source_sink/: dataloader.py  datawriter.py  gischangetracking.py
highstreets/data_transformation/: hextransform.py  mcard_transform.py  msoatransform.py
highstreets/docs/: api.md  bt_e2e_dataflow.md  dataloader.md  datawriter.md  gischangetracking.md  hex_transform.md
highstreets/features/: build_features.py  processing_functions.py
highstreets/hsdsprocess/: bt_hex.py  bt_msoa.py  hsds_bid_hs_tc_lookup.py  hsds_hs_bid_tc_bespoke_lookup_update.py  mcard_threehourly.py  mcard_weekly.py
highstreets/models/: train_model.py
highstreets/notebooks/exploratory/: 0.1-cd-basic-visualisations.ipynb  0.2-cd-make-yoy-from-raw.ipynb  0.3-cd-hs_regressions.ipynb  0.4-cd-explore-hierarchical-regression-pyro.ipynb  0.5-td-data_processing.ipynb
highstreets/visualisation/: visualise.py
models/mlflow/0/: meta.yaml
models/mlflow/0/29d971a42c364592925217c0a0545553/: meta.yaml
models/mlflow/0/29d971a42c364592925217c0a0545553/artifacts/Ridge Regression Model/: MLmodel  conda.yaml  requirements.txt
models/mlflow/0/29d971a42c364592925217c0a0545553/metrics/: MAE  MSE  R2
models/mlflow/0/29d971a42c364592925217c0a0545553/params/: regression target
models/mlflow/0/29d971a42c364592925217c0a0545553/tags/: mlflow.log-model.history  mlflow.source.name
notebooks/exploratory/: 0.1-cd-basic-visualisations.ipynb
references/: README.md  notes.md
reports/figures/hierarchical_model_graphs/: simple_regression_2020_pooled
tests/: conftest.py
