[tool.poetry]
name = "highstreets"
version = "0.1.0"
description = "Analysis and modeling of London high street profiles."
authors = ["Conor Dempsey <conor.dempsey@london.gov.uk>"]
license = "MIT"
repository = "https://github.com/Greater-London-Authority/highstreets"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.4.2"
arviz = "^0.12.0"
dill = "^0.3.4"
ipykernel = "^6.13.0"
ipython = "^8.2.0"
jax = "^0.3.6"
jaxlib = "^0.3.5"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
matplotlib-inline = "^0.1.3"
numpy = "^1.22.3"
numpyro = "^0.9.2"
python-dotenv = "^0.20.0"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
openpyxl = "^3.0.9"
flax = "^0.4.1"
graphviz = "^0.20"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=57.0.0"]
build-backend = "poetry.core.masonry.api"
